<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<properties>
		<maverickHome>${user.home}/maverick</maverickHome>
	</properties>
	<modelVersion>4.0.0</modelVersion>
	<artifactId>sshapi-maverick-synergy</artifactId>
	<name>SSHAPI Maverick Synergy</name>
	<description>This version uses the Maverick Synergy (3.x) branch of Maverick.

Downloads and more information about Maverick may be found at https://www.jadaptive.com

This library is the provider bridge for SSHAPI.</description>
	<parent>
		<artifactId>sshapi-group</artifactId>
		<groupId>com.sshtools</groupId>
		<version>2.0.0-SNAPSHOT</version>
		<relativePath>..</relativePath>
	</parent>
	<url>${scmWebRoot}/${project.artifactId}/</url>
	<distributionManagement>
		<repository>
			<id>opensource-releases</id>
			<url>http://artifactory.javassh.com/opensource-releases</url>
		</repository>
		<snapshotRepository>
			<id>opensource-snapshots</id>
			<url>http://artifactory.javassh.com/opensource-snapshots</url>
		</snapshotRepository>
	</distributionManagement>
	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<testSourceDirectory>src/test/java</testSourceDirectory>
		<outputDirectory>target/classes</outputDirectory>
		<testOutputDirectory>target/test-classes</testOutputDirectory>
		<resources>
			<resource>
				<targetPath>.</targetPath>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<targetPath>.</targetPath>
				<directory>src/test/resources</directory>
			</testResource>
		</testResources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>com.sshtools</groupId>
			<artifactId>sshapi-core</artifactId>
			<version>${project.version}</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.sshtools</groupId>
			<artifactId>maverick-synergy-client</artifactId>
			<version>${maverickSynergyVersion}</version>
		</dependency>

		<!-- Optional -->
		<dependency>
			<groupId>com.sshtools</groupId>
			<artifactId>maverick-zip</artifactId>
			<version>${maverickSynergyVersion}</version>
		</dependency>
		<dependency>
			<groupId>com.sshtools</groupId>
			<artifactId>maverick-ed25519</artifactId>
			<version>3.0.0-RC1</version>
		</dependency>
		<dependency>
			<groupId>com.sshtools</groupId>
			<artifactId>maverick-ed25519</artifactId>
			<version>3.0.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.sshtools</groupId>
			<artifactId>maverick-x509</artifactId>
			<version>3.0.0-RC1</version>
		</dependency>
		<dependency>
			<groupId>com.sshtools</groupId>
			<artifactId>maverick-bc</artifactId>
			<version>${maverickSynergyVersion}</version>
		</dependency>
		<dependency>
			<groupId>com.sshtools</groupId>
			<artifactId>maverick-sshagent</artifactId>
			<version>${maverickSynergyVersion}</version>
		</dependency>
		<dependency>
			<groupId>org.wildfly.openssl</groupId>
			<artifactId>wildfly-openssl</artifactId>
			<version>1.0.7.Final</version>
		</dependency>
	</dependencies>
</project>
